--- a/trunk/Sales_Galeral/Admin/MasterPageAdmin.master
+++ b/trunk/Sales_Galeral/Admin/MasterPageAdmin.master
@@ -1,20 +1,36 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPageAdmin.master.cs" Inherits="Admin_MasterPageAdmin" %>
+<%@ Register Src="~/Admin/Controls/HeaderAdmin.ascx" TagName="Top" TagPrefix="uc_Top" %>
+<%@ Register Src="~/Admin/Controls/MenuLeftAdmin.ascx" TagName="Left" TagPrefix="uc_Left" %>
+<%@ Register Src="~/Admin/Controls/FooterAdmin.ascx" TagName="Footer" TagPrefix="uc_Footer" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
+<head id="Head1" runat="server">
     <title></title>
-    <asp:ContentPlaceHolder id="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <link id="link_Style" href="../Style/Style.css" rel="Stylesheet" type="text/css"/>
+    <link href="../css/TimePicker.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
-    </div>
+        <div class="divcan">
+            <uc_Top:Top runat="server" ID="UC_Top" />
+        </div>
+        <div id="DIV_Center" class="divcan">
+            <div id="div1">
+                <uc_Left:Left ID="Left1" runat="server" />
+            </div>
+            <div id="div2"></div>
+            <div id="div_content">
+                <asp:ContentPlaceHolder id="ContentPlaceHolder" runat="server">
+                    
+                </asp:ContentPlaceHolder>
+            </div>
+        </div>        
+        <div style="clear:left"></div>  
+        <div style="margin:auto; height: 100px;width:1000px">
+            <uc_Footer:Footer runat="server" ID="Footer" />
+        </div>      
     </form>
 </body>
 </html>
