--- a/trunk/Sales_Galeral/MasterPage.master
+++ b/trunk/Sales_Galeral/MasterPage.master
@@ -104,84 +104,79 @@
             <%--<a id="header_logo" href="index.html" title="Pets Store"><img class="logo" src="client/images/log copy.jpg" style="width:260px; height:115px; margin-left: 155px;" alt="Pets Store" /></a>--%>
             <div id="wrapper3" class="clearfix">
                 <header id="header">
-		<a id="header_logo" href="Default.aspx" title="Pets Store"><img class="logo" src="client/img/logothai.png" style="width:260px; height:115px; margin-left: 155px; position: relative; margin-left: -46px; margin-top: -26px;" alt="Pets Store" /></a>
+		            <a id="header_logo" href="Default.aspx" title="Pets Store"><img class="logo" src="client/img/logothai.png" style="width:260px; height:115px; margin-left: 155px; position: relative; margin-left: -46px; margin-top: -26px;" alt="Pets Store" /></a>
 		
-        <ul id="tmheaderlinks">
-			<li><a href="Default.aspx" class="active">home</a></li>
-			<li><a href="">specials</a></li>
-			<li><a href="">delivery</a></li>
-			<li><a href="">contact</a></li>
-		</ul><!-- Block user information module HEADER -->
-            <asp:MultiView ID="MultiView1" runat="server">`
-                <asp:View ID="View1" runat="server">
-                    <!-- Block search module TOP -->
-		<div id="search_block_top">
+                    <!-- Block user information module HEADER -->
+                        <asp:MultiView ID="MultiView1" runat="server">`
+                            <asp:View ID="View1" runat="server">
+                                <!-- Block search module TOP -->
+		            <div id="search_block_top">
 			
-				<label for="username_querry">UserName</label>
-				<input type="hidden" name="controller" value="search" />
-				<input type="hidden" name="orderby" value="position" />
-				<input type="hidden" name="orderway" value="desc" />
-				<input class="search_query" runat="Server" type="text" id="username_querry" name="username" value="UserName" onFocus="if(this.value=='UserName')this.value='';" onBlur="if(this.value=='')this.value='UserName';" />
+				            <label for="username_querry">UserName</label>
+				            <input type="hidden" name="controller" value="search" />
+				            <input type="hidden" name="orderby" value="position" />
+				            <input type="hidden" name="orderway" value="desc" />
+				            <input class="search_query" runat="Server" type="text" id="username_querry" name="username" value="UserName" onFocus="if(this.value=='UserName')this.value='';" onBlur="if(this.value=='')this.value='UserName';" />
                
 
-                <label for="password_querry">Password</label>
-				<input type="hidden" name="controller" value="search" />
-				<input type="hidden" name="orderby" value="position" />
-				<input type="hidden" name="orderway" value="desc" />
-				<input style=" margin-left: 10px;" class="search_query" type="password" id="password_querry" runat="Server" name="password"  onFocus="if(this.value=='Password')this.value='';" onBlur="if(this.value=='')this.value='Password';" />
-				<asp:LinkButton ID="lbtn_login" runat="server" onclick="lbtn_login_Click" 
-                    CausesValidation="False">OK</asp:LinkButton>
-                <div id="text_remember" style="height: 40px;margin-left: 2px;margin-top: 36px;" >
-                <asp:CheckBox ID="cbxRemember" CssClass="remember" runat="server"></asp:CheckBox><span style="margin-left:10px">Ghi nhớ</span>
+                            <label for="password_querry">Password</label>
+				            <input type="hidden" name="controller" value="search" />
+				            <input type="hidden" name="orderby" value="position" />
+				            <input type="hidden" name="orderway" value="desc" />
+				            <input style=" margin-left: 10px;" class="search_query" type="password" id="password_querry" runat="Server" name="password"  onFocus="if(this.value=='Password')this.value='';" onBlur="if(this.value=='')this.value='Password';" />
+				            <asp:LinkButton ID="lbtn_login" runat="server" onclick="lbtn_login_Click" 
+                                CausesValidation="False">OK</asp:LinkButton>
+                            <div id="text_remember" style="height: 40px;margin-left: 2px;margin-top: 36px;" >
+                            <asp:CheckBox ID="cbxRemember" CssClass="remember" runat="server"></asp:CheckBox><span style="margin-left:10px">Ghi nhớ</span>
                 
-               </div>
+                           </div>
 			
-		</div>
-		<!-- /Block search module TOP -->
+		            </div>
+		            <!-- /Block search module TOP -->
 		
-		<ul id="header_user">			
+		            <ul id="header_user">			
 			
-			<li id="user_info">	Welcome&nbsp;(<span style="color: #FE971C"> Quest! </span>)</li>
-			<li id="your_account"><asp:LinkButton ID="lbtn_Register" runat="server" 
-                    onclick="lbtn_Register_Click" ToolTip="Đăng ký tài khoản">Đăng ký</asp:LinkButton></li>
+			            <li id="user_info">	Welcome&nbsp;(<span style="color: Blue"> Guest! </span>)</li>
+			            <li id="your_account"><asp:LinkButton ID="lbtn_Register" runat="server" 
+                                onclick="lbtn_Register_Click" ToolTip="Đăng ký tài khoản">Đăng ký</asp:LinkButton></li>
 		
-                </asp:View>
+                            </asp:View>
 
-                <asp:View ID="View2" runat="server">
-                <ul id="header_user">
+                            <asp:View ID="View2" runat="server">
+                            <ul id="header_user">
 		
 			
-			<li id="user_info">	Welcome:&nbsp;(&nbsp;<asp:LinkButton ID="lbtn_Account" 
-                    runat="server" onclick="lbtn_Account_Click" Text="account" ></asp:LinkButton> &nbsp;)</li>
-			<li id="your_account"><asp:LinkButton ID="lbtn_Exit" runat="server" 
-                    onclick="lbtn_Exit_Click">Thoát</asp:LinkButton></li>
+			            <li id="user_info">	Welcome:&nbsp;(&nbsp;<asp:LinkButton ID="lbtn_Account" 
+                                runat="server" onclick="lbtn_Account_Click" Text="account" ></asp:LinkButton> &nbsp;)</li>
+			            <li id="your_account"><asp:LinkButton ID="lbtn_Exit" runat="server" 
+                                onclick="lbtn_Exit_Click">Thoát</asp:LinkButton></li>
 		
-                </asp:View>
-            </asp:MultiView>
-             <li id="shopping_cart">
-        <asp:UpdatePanel ID="UpdatePanel1" runat="server">
-             <ContentTemplate>
-				        <asp:LinkButton ID="lbtn_Cart" runat="server" onclick="lbtn_Cart_Click" Text="Cart: (Empty)"></asp:LinkButton>
-                </ContentTemplate>       
-        </asp:UpdatePanel>
-			 </li>
-            </ul><!-- /Block user information module HEADER -->
+                            </asp:View>
+                        </asp:MultiView>
+                         <li id="shopping_cart">
+                    <asp:UpdatePanel ID="UpdatePanel1" runat="server">
+                         <ContentTemplate>
+				                    <asp:LinkButton ID="lbtn_Cart" runat="server" onclick="lbtn_Cart_Click" Text="Cart: (Empty)" style="color:red;"></asp:LinkButton>
+                            </ContentTemplate>       
+                    </asp:UpdatePanel>
+			             </li>
+                        </ul><!-- /Block user information module HEADER -->
 
 
-		<div id="topmenu">
-			<ul class="sf-menu clearfix">
-            <li><a id="hot" href="TypeProduct.aspx?type=0">DEAL HOT</a></li>
-				<li><a id="new" href="TypeProduct.aspx?type=1">DEAL NEW</a></li>
-            <asp:DataList ID="DataListMenu" runat="server">         
-                        <ItemTemplate>
+		            <div id="topmenu">
+			            <ul class="sf-menu clearfix">
+                        <li><a id="hot" href="TypeProduct.aspx?type=0">DEAL HOT</a></li>
+				            <li><a id="new" href="TypeProduct.aspx?type=1">DEAL NEW</a></li>
+                        <asp:DataList ID="DataListMenu" runat="server">         
+                                    <ItemTemplate>
                         
-                            <li><a id="a<%# Eval("ID") %>" href='<%# "TypeProduct.aspx?categr=" + Eval("ID") %>' title="<%# Eval("Category_Name")%>">
-                                <%# Eval("Category_Name")%></a></li>
-                        </ItemTemplate>
-                    </asp:DataList>
-			</ul>
-		</div>
-	</header>
+                                        <li><a id="a<%# Eval("ID") %>" href='<%# "TypeProduct.aspx?categr=" + Eval("ID") %>' title="<%# Eval("Category_Name")%>">
+                                            <%# Eval("Category_Name")%></a></li>
+                                    </ItemTemplate>
+                                </asp:DataList>
+			            </ul>
+		            </div>
+	            </header>
                 <div class="columns clearfix">
                     <div id="center_column" class="center_column">
                         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
@@ -190,53 +185,44 @@
                 </div>
             </div>
             <footer>
-	<div id="footer" class="clearfix">
-		<div>
-			<div id="tmfooterlinks"> 	
-				<div>
-					<h4>Information</h4>
-					<ul>
-						<li><a href="">Sitemap</a></li>
-						<li><a href="">Legal Notice</a></li>
-						<li><a href="">Terms and conditions</a></li>
-						<li><a href="">About us</a></li>
-						<li><a href="index.php?controller=contact">Contact</a></li>
-					</ul>
-				</div>
-				<div>
-					<h4>Our offers</h4>
-					<ul>
-						<li><a href="">New products</a></li>
-						<li><a href="">Specials</a></li>
-						<li><a href="">Top sellers</a></li>
-						<li><a href="">Manufacturers</a></li>
-						<li><a href="">Suppliers</a></li>
-					</ul>
-				</div>
-				<div>
-					<h4>My account</h4>
-					<ul>
-						<li><a href="">My orders</a></li>
-						<li><a href="">My addresses</a></li>
-						<li><a href="">My personal info</a></li>
-						<li><a href="">My credit slips</a></li>
-						<li><a href="">My vouchers</a></li>
-					</ul>
-				</div>
-				
-				<p>&copy; 2012 Powered by <a href="http://www.prestashop.com">PrestaShop</a>&trade;. All rights reserved.</p>
-			</div>
-			<div id="social_block">
-				<h4>Follow us</h4>
-				<ul>
-					<li class="rss"><a href="RSS">RSS</a></li>
-					<li class="facebook"><a href="http://www.facebook.com/">Facebook</a></li>	
-					<li class="twitter"><a href="http://www.twitter.com/">Twitter</a></li>	
-				</ul>
-			</div>
-		</div>
-	</div>
-</footer>
+	            <div id="footer" class="clearfix" style="background-color:White;">
+		            <div>
+			            <div id="tmfooterlinks"> 	
+				            <div align="center">
+					            <h4>Thai Deals</h4>
+					            <ul>
+						            <li><a href="">Giới thiệu</a></li>
+					            </ul>
+				            </div>
+				            <div align="center">
+					            <h4>Hướng Dẫn</h4>
+					            <ul>
+						            <li><a href="">Hướng dẫn mua hàng</a></li>
+					            </ul>
+				            </div>
+				            <div align="center">
+					            <h4>Thanh Toán</h4>
+					            <ul>
+						            <li><a href="">Thông tin thanh toán</a></li>
+					            </ul>
+				            </div>
+				            <%--<p>Địa chỉ số 7 tổ 6 ngõ 105 Đường Lương Ngọc Quyến TP Thai Nguyên | Email: loveyou_is_loveme_1501@yahoo.com.</p>--%>
+			            </div>
+			            <div id="social_block" align="center">
+				            <h4>Chia Sẻ Liên Kết</h4>
+				            <ul>
+					            <%--<li class="rss"><a href="RSS">RSS</a></li>--%>
+					            <li class="facebook"><a href="http://www.facebook.com/">Facebook</a></li>	
+					            <li class="twitter"><a href="http://www.twitter.com/">Twitter</a></li>	
+				            </ul>
+			            </div>
+		            </div>
+	            </div>
+                <div style="clear:left;padding-top:20px;background-color:#272727;color:White;padding-bottom:15px;" align="center">
+                    <p>Địa chỉ số 7 tổ 6 ngõ 105 Đường Lương Ngọc Quyến TP Thai Nguyên | Email: loveyou_is_loveme_1501@yahoo.com
+                    <br />Phone : 0983165163</p>
+                </div>
+            </footer>
         </div>
     </div>
     </form>
