--- a/Sales_Galeral/MasterPage.master
+++ b/Sales_Galeral/MasterPage.master
@@ -7,12 +7,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="index,follow" />
     <title>General Store</title>
-    <link href='http://fonts.googleapis.com/css?family=Kreon:400,700' rel='stylesheet'
-        type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Kreon:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css' />
-    <link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:400,700' rel='stylesheet'
-        type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Cabin+Condensed:400,700' rel='stylesheet' type='text/css' />
     <link href="client/css/global.css" rel="stylesheet" type="text/css" media="all" />
     <!--	<link href="css/style1.css" rel="stylesheet" type="text/css" media="all" />-->
     <link href="client/css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -88,157 +86,147 @@
                 default:
                     break;
             }
-
         }
     </script>
 </head>
 <body id="index" onload="setClass()">
     <form id="frmTempMaster" runat="Server">
-    <asp:ScriptManager ID="ScriptManager1" runat="server">
-    </asp:ScriptManager>
-    <p id="back-top">
-        <a href="#top"><span></span></a>
-    </p>
-    <div id="wrapper1">
-        <div id="wrapper2">
-            <%--<a id="header_logo" href="index.html" title="Pets Store"><img class="logo" src="client/images/log copy.jpg" style="width:260px; height:115px; margin-left: 155px;" alt="Pets Store" /></a>--%>
-            <div id="wrapper3" class="clearfix">
-                <header id="header">
-		            <a id="header_logo" href="Default.aspx" title="Pets Store"><img class="logo" src="client/img/logothai.png" style="width:260px; height:115px; margin-left: 155px; position: relative; margin-left: -46px; margin-top: -26px;" alt="Pets Store" /></a>
-		
-                    <!-- Block user information module HEADER -->
-                        <asp:MultiView ID="MultiView1" runat="server">`
-                            <asp:View ID="View1" runat="server">
-                                <!-- Block search module TOP -->
-		            <div id="search_block_top">
+        <asp:ScriptManager ID="ScriptManager1" runat="server">
+        </asp:ScriptManager>
+        <p id="back-top">
+            <a href="#top"><span></span></a>
+        </p>
+        <div id="wrapper1">
+            <div id="wrapper2">
+                <div id="wrapper3" class="clearfix">
+                    <header id="header">
+		                <a id="header_logo" href="Default.aspx" title="Pets Store"><img class="logo" src="client/img/logothai.png" style="width:260px; height:115px; margin-left: 155px; position: relative; margin-left: -46px; margin-top: -26px;" alt="Pets Store" /></a>
+                        <!-- Block user information module HEADER -->
+                            <asp:MultiView ID="MultiView1" runat="server">`
+                                <asp:View ID="View1" runat="server">
+                                    <!-- Block search module TOP -->
+		                        <div id="search_block_top">
 			
-				            <label for="username_querry">UserName</label>
-				            <input type="hidden" name="controller" value="search" />
-				            <input type="hidden" name="orderby" value="position" />
-				            <input type="hidden" name="orderway" value="desc" />
-				            <input class="search_query" runat="Server" type="text" id="username_querry" name="username" value="UserName" onFocus="if(this.value=='UserName')this.value='';" onBlur="if(this.value=='')this.value='UserName';" />
+				                    <label for="username_querry">UserName</label>
+				                    <input type="hidden" name="controller" value="search" />
+				                    <input type="hidden" name="orderby" value="position" />
+				                    <input type="hidden" name="orderway" value="desc" />
+				                    <input class="search_query" runat="Server" type="text" id="username_querry" name="username" value="UserName" onFocus="if(this.value=='UserName')this.value='';" onBlur="if(this.value=='')this.value='UserName';" />
                
 
-                            <label for="password_querry">Password</label>
-				            <input type="hidden" name="controller" value="search" />
-				            <input type="hidden" name="orderby" value="position" />
-				            <input type="hidden" name="orderway" value="desc" />
-				            <input style=" margin-left: 10px;" class="search_query" type="password" id="password_querry" runat="Server" name="password"  onFocus="if(this.value=='Password')this.value='';" onBlur="if(this.value=='')this.value='Password';" />
-				            <asp:LinkButton ID="lbtn_login" runat="server" onclick="lbtn_login_Click" 
-                                CausesValidation="False">OK</asp:LinkButton>
-                            <div id="text_remember" style="height: 40px;margin-left: 2px;margin-top: 36px;" >
-                            <asp:CheckBox ID="cbxRemember" CssClass="remember" runat="server"></asp:CheckBox><span style="margin-left:10px">Ghi nhớ</span>
-                
-                           </div>
-			
-		            </div>
-		            <!-- /Block search module TOP -->
+                                    <label for="password_querry">Password</label>
+				                    <input type="hidden" name="controller" value="search" />
+				                    <input type="hidden" name="orderby" value="position" />
+				                    <input type="hidden" name="orderway" value="desc" />
+				                    <input style=" margin-left: 10px;" class="search_query" type="password" id="password_querry" runat="Server" name="password"  onFocus="if(this.value=='Password')this.value='';" onBlur="if(this.value=='')this.value='Password';" />
+				                    <asp:LinkButton ID="lbtn_login" runat="server" onclick="lbtn_login_Click" 
+                                        CausesValidation="False">OK</asp:LinkButton>
+                                    <div id="text_remember" style="height: 40px;margin-left: 2px;margin-top: 36px;" >
+                                        <asp:CheckBox ID="cbxRemember" CssClass="remember" runat="server"></asp:CheckBox><span style="margin-left:10px">Ghi nhớ</span>
+                                    </div>
+		                        </div>
+		                <!-- /Block search module TOP -->
 		
-		            <ul id="header_user">			
-			
-			            <li id="user_info">	Welcome&nbsp;(<span style="color: Blue"> Guest! </span>)</li>
-			            <li id="your_account"><asp:LinkButton ID="lbtn_Register" runat="server" 
-                                onclick="lbtn_Register_Click" ToolTip="Đăng ký tài khoản">Đăng ký</asp:LinkButton></li>
-		
+		                <ul id="header_user">			
+			                <li id="user_info">	Welcome&nbsp;(<span style="color: Blue"> Guest! </span>)</li>
+			                <li id="your_account">
+                                <asp:LinkButton ID="lbtn_Register" runat="server" 
+                                onclick="lbtn_Register_Click" ToolTip="Đăng ký tài khoản">Đăng ký</asp:LinkButton>
+                            </li>
                             </asp:View>
-
-                            <asp:View ID="View2" runat="server">
-                            <ul id="header_user">
-		
-			
-			            <li id="user_info">	Welcome:&nbsp;(&nbsp;<asp:LinkButton ID="lbtn_Account" 
-                                runat="server" onclick="lbtn_Account_Click" Text="account" ForeColor="Blue"></asp:LinkButton> &nbsp;)</li>
-			            <li id="your_account"><asp:LinkButton ID="lbtn_Exit" runat="server" 
-                                onclick="lbtn_Exit_Click" ForeColor="Red">Thoát</asp:LinkButton></li>
-		
-                            </asp:View>
-                        </asp:MultiView>
-                         <li id="shopping_cart">
-                    <asp:UpdatePanel ID="UpdatePanel1" runat="server">
-                         <ContentTemplate>
-				                    <asp:LinkButton ID="lbtn_Cart" runat="server" onclick="lbtn_Cart_Click" Text="Cart: (Empty)" style="color:red;"></asp:LinkButton>
-                            </ContentTemplate>       
-                    </asp:UpdatePanel>
-			             </li>
+                                <asp:View ID="View2" runat="server">
+                                <ul id="header_user">
+			                    <li id="user_info">	Welcome:&nbsp;(&nbsp;<asp:LinkButton ID="lbtn_Account" 
+                                        runat="server" onclick="lbtn_Account_Click" Text="account" ForeColor="Blue"></asp:LinkButton> &nbsp;)</li>
+			                    <li id="your_account"><asp:LinkButton ID="lbtn_Exit" runat="server" 
+                                        onclick="lbtn_Exit_Click" ForeColor="Red">Thoát</asp:LinkButton></li>
+                                </asp:View>
+                            </asp:MultiView>
+                             <li id="shopping_cart">
+                                <asp:UpdatePanel ID="UpdatePanel1" runat="server">
+                                    <ContentTemplate>
+				                        <asp:LinkButton ID="lbtn_Cart" runat="server" onclick="lbtn_Cart_Click" Text="Cart: (Empty)" style="color:red;"></asp:LinkButton>
+                                    </ContentTemplate>       
+                                </asp:UpdatePanel>
+			                 </li>
                         </ul><!-- /Block user information module HEADER -->
 
-
-		            <div id="topmenu">
-			            <ul class="sf-menu clearfix">
-                        <li><a id="hot" href="TypeProduct.aspx?type=0">DEAL HOT</a></li>
-				            <li><a id="new" href="TypeProduct.aspx?type=1">DEAL NEW</a></li>
-                        <asp:DataList ID="DataListMenu" runat="server">         
+		                <div id="topmenu">
+			                <ul class="sf-menu clearfix">
+                                <li><a id="hot" href="TypeProduct.aspx?type=0">DEAL HOT</a></li>
+				                <li><a id="new" href="TypeProduct.aspx?type=1">DEAL NEW</a></li>
+                                <asp:DataList ID="DataListMenu" runat="server">         
                                     <ItemTemplate>
-                        
                                         <li><a id="a<%# Eval("ID") %>" href='<%# "TypeProduct.aspx?categr=" + Eval("ID") %>' title="<%# Eval("Category_Name")%>">
-                                            <%# Eval("Category_Name")%></a></li>
+                                            <%# Eval("Category_Name")%></a>
+                                        </li>
                                     </ItemTemplate>
                                 </asp:DataList>
-			            </ul>
-		            </div>
-	            </header>
-                <div class="columns clearfix">
-                    <div id="center_column" class="center_column">
-                        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                        </asp:ContentPlaceHolder>
+			                </ul>
+		                </div>
+	                </header>
+                    <div class="columns clearfix">
+                        <div id="center_column" class="center_column">
+                            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                            </asp:ContentPlaceHolder>
+                        </div>
                     </div>
                 </div>
+                <footer>
+	                <div id="footer" class="clearfix" style="background-color:White;">
+		                <div>
+			                <div id="tmfooterlinks"> 	
+				                <div align="center">
+					                <h4>Thai Deals</h4>
+					                <ul>
+						                <li><a href="About.aspx" style="color:Black;">Giới thiệu</a></li>
+					                </ul>
+				                </div>
+                                <div align="center">
+					                <h4>Thanh Toán</h4>
+					                <ul>
+						                <li><a href="PaymentInfo.aspx" style="color:Black;">Thông tin thanh toán</a></li>
+					                </ul>
+				                </div>
+				                <div align="center">
+					                <h4>Hỗ trợ Online</h4>
+					                <ul>
+                                        <li>
+                                            <asp:DataList ID="DTL_ShowOnline" CellPadding="1" Width="100%" runat="server" RepeatColumns="1">
+                                                <ItemTemplate>
+                                                    <div align="left">
+                                                        <asp:Label ID="lbl_name" Text='<%# Eval("Name") %>' runat="server" style="color:Black;font-weight:bold;" ></asp:Label>
+                                                        &nbsp;&nbsp;<a href="ymsgr:sendIM?<%# Eval("Yahoo") %>"><img alt="" src="http://opi.yahoo.com/online?u=<%# Eval("Yahoo") %>&m=g&t=2" border="0" /></a>
+                                                        <br />Phone : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<asp:Label ID="lbl_phone" Text='<%# Eval("PhoneSuppot") %>' runat="server" style="color:Black;font-weight:bold;" ></asp:Label>
+                                                    </div>
+                                                </ItemTemplate>
+                                            </asp:DataList>
+                                        </li>
+                                    </ul>
+				                </div>
+			                </div>
+			                <div id="social_block" align="center">
+				                <h4>Chia Sẻ Liên Kết</h4>
+                                <div id="DIV_5" class="div5" runat="server">
+                                    <asp:DataList ID="DTL_ShowLienKet" CellPadding="1" Width="40px" runat="server" RepeatColumns="4">
+                                        <ItemTemplate>
+                                            <div align="left">
+                                                <a href='<%# Eval("Link") %>'> 
+                                                <img alt="" src='<%#"./Images/ImageLienKet/"+Eval("Images") %>' width="40px" height="40px" /></a>
+                                            </div>
+                                        </ItemTemplate>
+                                    </asp:DataList>
+                                </div>
+			                </div>
+		                </div>
+	                </div>
+                    <div style="clear:left;padding-top:20px;background-color:#272727;color:White;padding-bottom:15px;" align="center">
+                        <p>Địa chỉ : số 7,tổ 6,ngõ 105,Đường Lương Ngọc Quyến - TP Thái Nguyên | Email: loveyou_is_loveme_1501@yahoo.com
+                        <br />Phone : 0983165163</p>
+                    </div>
+                </footer>
             </div>
-            <footer>
-	            <div id="footer" class="clearfix" style="background-color:White;">
-		            <div>
-			            <div id="tmfooterlinks"> 	
-				            <div align="center">
-					            <h4>Thai Deals</h4>
-					            <ul>
-						            <li><a href="About.aspx" style="color:Black;">Giới thiệu</a></li>
-					            </ul>
-				            </div>
-                            <div align="center">
-					            <h4>Thanh Toán</h4>
-					            <ul>
-						            <li><a href="PaymentInfo.aspx" style="color:Black;">Thông tin thanh toán</a></li>
-					            </ul>
-				            </div>
-				            <div align="center">
-					            <h4>Hỗ trợ Online</h4>
-					            <ul>
-                                    <li>
-                                        <asp:DataList ID="DTL_ShowOnline" CellPadding="1" Width="100%" runat="server" RepeatColumns="1">
-                                            <ItemTemplate>
-                                                <div align="left">
-                                                    <asp:Label ID="lbl_name" Text='<%# Eval("Name") %>' runat="server" style="color:Black;font-weight:bold;" ></asp:Label>
-                                                    &nbsp;&nbsp;<a href="ymsgr:sendIM?<%# Eval("Yahoo") %>"><img alt="" src="http://opi.yahoo.com/online?u=<%# Eval("Yahoo") %>&m=g&t=2" border="0" /></a>
-                                                    <br />Phone : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<asp:Label ID="lbl_phone" Text='<%# Eval("PhoneSuppot") %>' runat="server" style="color:Black;font-weight:bold;" ></asp:Label>
-                                                </div>
-                                            </ItemTemplate>
-                                        </asp:DataList>
-                                    </li>
-                                </ul>
-				            </div>
-			            </div>
-			            <div id="social_block" align="center">
-				            <h4>Chia Sẻ Liên Kết</h4>
-                            <div id="DIV_5" class="div5" runat="server">
-                                <asp:DataList ID="DTL_ShowLienKet" CellPadding="1" Width="40px" runat="server" RepeatColumns="4">
-                                    <ItemTemplate>
-                                        <div align="left">
-                                            <a href='<%# Eval("Link") %>'> 
-                                            <img alt="" src='<%#"./Images/ImageLienKet/"+Eval("Images") %>' width="40px" height="40px" /></a>
-                                        </div>
-                                    </ItemTemplate>
-                                </asp:DataList>
-                            </div>
-			            </div>
-		            </div>
-	            </div>
-                <div style="clear:left;padding-top:20px;background-color:#272727;color:White;padding-bottom:15px;" align="center">
-                    <p>Địa chỉ : số 7,tổ 6,ngõ 105,Đường Lương Ngọc Quyến - TP Thái Nguyên | Email: loveyou_is_loveme_1501@yahoo.com
-                    <br />Phone : 0983165163</p>
-                </div>
-            </footer>
         </div>
-    </div>
     </form>
 </body>
 </html>
